@@ -12,7 +12,11 @@ $xpdo = $install->getConnection($mode);
 $errors = array();
 $dbExists = false;
 if (!is_object($xpdo) || !($xpdo instanceof xPDO)) {
-    $this->error->failure($install->lexicon('xpdo_err_ins'));
+    if (is_bool($xpdo)) {
+        $this->error->failure($install->lexicon('xpdo_err_ins'));
+    } else {
+        $this->error->failure($xpdo);
+    }
 }
 $xpdo->setLogTarget(array(
     'target' => 'ARRAY'
